--- a/src/ArchiDesignPatterns.Mobile/ArchiDesignPatterns.Mobile.csproj
+++ b/src/ArchiDesignPatterns.Mobile/ArchiDesignPatterns.Mobile.csproj
@@ -62,14 +62,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Pages\DesignPatternsPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	</ItemGroup>
-
-	<ItemGroup>
 	  <Folder Include="Converters\" />
 	  <Folder Include="Models\" />
+	  <Folder Include="Pages\" />
 	  <Folder Include="ViewModels\" />
 	</ItemGroup>
 
