--- a/src/ArchiDesignPatterns.Mobile/ArchiDesignPatterns.Mobile.csproj
+++ b/src/ArchiDesignPatterns.Mobile/ArchiDesignPatterns.Mobile.csproj
@@ -17,7 +17,7 @@
     <!-- Display name -->
     <ApplicationTitle>ArchiDesignPatterns</ApplicationTitle>
     <!-- App Identifier -->
-    <ApplicationId>fr.mafyou.archidesignpatterns</ApplicationId>
+    <ApplicationId>fr.mafyou.codepatterns</ApplicationId>
     <!-- Versions -->
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
@@ -26,9 +26,11 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- App Icon -->
-    <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+    <!--<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />-->
+    <MauiIcon Include="Resources\AppIcon\appicon.png" />
+    <MauiSplashScreen Include="Resources\Splash\splash.png" />
     <!-- Splash Screen -->
-    <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+    <!--<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />-->
     <!-- Images -->
     <MauiImage Include="Resources\Images\*" />
     <MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
