--- a/src/ArchiDesignPatterns.Mobile/ArchiDesignPatterns.Mobile.csproj
+++ b/src/ArchiDesignPatterns.Mobile/ArchiDesignPatterns.Mobile.csproj
@@ -28,7 +28,7 @@
     <!-- App Icon -->
     <!--<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />-->
     <MauiIcon Include="Resources\AppIcon\appicon.png" />
-    <MauiSplashScreen Include="Resources\Splash\splash.png" />
+    <MauiSplashScreen Include="Resources\Splash\splash.png" Color="#FFFFFF" />
     <!-- Splash Screen -->
     <!--<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />-->
     <!-- Images -->
