--- a/src/ArchiDesignPatterns.Mobile/ArchiDesignPatterns.Mobile.csproj
+++ b/src/ArchiDesignPatterns.Mobile/ArchiDesignPatterns.Mobile.csproj
@@ -54,4 +54,20 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.67.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Resources\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Strings.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\Strings\" />
+  </ItemGroup>
 </Project>
